--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "express": "^4.17.1",
+        "uuid": "^7.0.3",
         "ws": "^7.2.3"
     },
     "devDependencies": {
